force-app/main/default/objects/CCR_DemandwareReplaceOrderDetails__mdt/CCR_DemandwareReplaceOrderDetails__mdt.object-meta.xml
<CustomObject>
    <description>Used by CCR to store country specific details for Demandware Replace Order API</description>
    <label>CCR DemandwareReplaceOrderDetails</label>
    <pluralLabel>CCR_DemandwareReplaceOrderDetails</pluralLabel>
</CustomObject>