force-app/main/default/objects/CCR_DemandwareReplaceOrderDetails__mdt/fields/CCR_BasicReplacementOrderEndPoint__c.field-meta.xml
<CustomField>
    <fullName>CCR_BasicReplacementOrderEndPoint__c</fullName>
    <description>Used by CCR to get end point url for Demandware Replacement Order.</description>
    <label>CCR BasicReplacementOrderEndPoint</label>
    <length>100</length>
    <type>Text</type>
</CustomField>