force-app/main/default/objects/CCR_DemandwareReplaceOrderDetails__mdt/fields/CCR_CatalogId__c.field-meta.xml
<CustomField>
    <fullName>CCR_CatalogId__c</fullName>
    <description>Used by CCR to get catalog_id.</description>
    <label>CCR CatalogId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>