force-app/main/default/objects/CCR_DemandwareReplaceOrderDetails__mdt/fields/CCR_DWGetProductAuthEndPoint__c.field-meta.xml
<CustomField>
    <fullName>CCR_DWGetProductAuthEndPoint__c</fullName>
    <description>Used by CCR to store end point for Get Product Id API authentication</description>
    <label>CCR DWGetProductAuthEndPoint</label>
    <length>100</length>
    <type>Text</type>
</CustomField>