force-app/main/default/objects/CCR_DemandwareReplaceOrderDetails__mdt/fields/CCR_DWGetProductIdEndPoint__c.field-meta.xml
<CustomField>
    <fullName>CCR_DWGetProductIdEndPoint__c</fullName>
    <label>CCR DWGetProductIdEndPoint</label>
    <length>100</length>
    <type>Text</type>
</CustomField>