force-app/main/default/objects/CCR_DemandwareReplaceOrderDetails__mdt/fields/CCR_IsBasicAuthEnabled__c.field-meta.xml
<CustomField>
    <fullName>CCR_IsBasicAuthEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by CCR to check whether Basic username and password authentication is needed for Replace Order API.</description>
    <label>CCR IsBasicAuthEnabled</label>
    <type>Checkbox</type>
</CustomField>