force-app/main/default/objects/CCR_DemandwareReplaceOrderDetails__mdt/fields/CCR_PrivateKey__c.field-meta.xml
<CustomField>
    <fullName>CCR_PrivateKey__c</fullName>
    <description>Used by CCR to get private key for Replacement Order API.</description>
    <label>CCR PrivateKey</label>
    <length>100</length>
    <type>Text</type>
</CustomField>