force-app/main/default/objects/CCR_DemandwareReplaceOrderDetails__mdt/fields/CCR_ReplacementOrderData__c.field-meta.xml
<CustomField>
    <fullName>CCR_ReplacementOrderData__c</fullName>
    <description>Used by CCR to get the data to be encrypted for replace order API.</description>
    <label>CCR ReplacementOrderData</label>
    <length>100</length>
    <type>Text</type>
</CustomField>