force-app/main/default/objects/CCR_DemandwareReplaceOrderDetails__mdt/fields/CCR_ReplacementOrderEndpoint__c.field-meta.xml
<CustomField>
    <fullName>CCR_ReplacementOrderEndpoint__c</fullName>
    <label>CCR ReplacementOrderEndpoint</label>
    <length>100</length>
    <type>Text</type>
</CustomField>