force-app/main/default/objects/CCR_DemandwareReplaceOrderDetails__mdt/fields/CCR_ReplaceOrderCountry__c.field-meta.xml
<CustomField>
    <fullName>CCR_ReplaceOrderCountry__c</fullName>
    <description>Used by CCR to look up using current user&apos;s country code.</description>
    <label>CCR ReplaceOrderCountry</label>
    <length>2</length>
    <type>Text</type>
</CustomField>