force-app/main/default/objects/CCR_DemandwareReplaceOrderDetails__mdt/fields/CCR_SaltKey__c.field-meta.xml
<CustomField>
    <fullName>CCR_SaltKey__c</fullName>
    <description>Used by CCR to get Salt Key for Replacement Order API.</description>
    <label>CCR SaltKey</label>
    <length>100</length>
    <type>Text</type>
</CustomField>