force-app/main/default/objects/CCR_DemandwareReplaceOrderDetails__mdt/fields/CCR_WebserviceTimeOut__c.field-meta.xml
<CustomField>
    <fullName>CCR_WebserviceTimeOut__c</fullName>
    <description>Used by CCR to store timeout for webservice callout.</description>
    <label>CCR WebserviceTimeOut</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>